squidguardmgr.css header class missing semicolon

--- a/htdocs/squidguardmgr.css
+++ b/htdocs/squidguardmgr.css
@@ -65,7 +65,7 @@ td {
 .header {
 	font-family : Verdana, Arial, Helvetica, sans-serif;
   	font-size : 13px;
-	border: 0px
+	border: 0px;
 	padding: 0px;
 	background: #7F90B0;
 	color: #FFFFFF;
